app/styles/main.scss
/*======================================================*\
 * Mixins
\*======================================================*/

@import "mixins";

$icon-font-path: '../fonts/';

/*======================================================*\
 * Body
\*======================================================*/
html, body {
  overflow-x: hidden;
  overflow-y: auto;
}

body {
  font-family: Arial,Helvetica,Sans-Serif;
  font-size: 12px;

  padding: 0;
  margin: 0;
  opacity: 0;
  animation-play-state: paused;
  animation-fill-mode: forwards;
  @include all-animation(fadein 1s);

  /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#010105+0,090919+76 */
  background: #010105; /* Old browsers */
  background: -moz-linear-gradient(top,  #010105 0%, #090919 76%); /* FF3.6+ */
  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#010105), color-stop(76%,#090919)); /* Chrome,Safari4+ */
  background: -webkit-linear-gradient(top,  #010105 0%,#090919 76%); /* Chrome10+,Safari5.1+ */
  background: -o-linear-gradient(top,  #010105 0%,#090919 76%); /* Opera 11.10+ */
  background: -ms-linear-gradient(top,  #010105 0%,#090919 76%); /* IE10+ */
  background: linear-gradient(to bottom,  #010105 0%,#090919 76%); /* W3C */
  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#010105', endColorstr='#090919',GradientType=0 ); /* IE6-9 */
}

@mixin fadein {
  from { opacity: 0; }
  to   { opacity: 1; }
}

@keyframes fadein {
  @include fadein;
}

/* Firefox < 16 */
@-moz-keyframes fadein {
  @include fadein;
}

/* Safari, Chrome and Opera > 12.1 */
@-webkit-keyframes fadein {
  @include fadein;
}

/* Internet Explorer */
@-ms-keyframes fadein {
  @include fadein;
}

/* Opera < 12.1 */
@-o-keyframes fadein {
  @include fadein;
}

/*======================================================*\
 * Global
\*======================================================*/
div {
  padding: 0px;
  margin: 0px;
}

.phoneBackground {
  width: 100%;
}

/*======================================================*\
 * Canvas Overlay
\*======================================================*/
#canvasOverlay {
  position: fixed;
  width: 100%;
  height: 100%;
  left: 0px;
  top: 0px;  
}

/*======================================================*\
 * Parallax Elements
\*======================================================*/
.moon {
  background: url("/images/moon.png") no-repeat top center;
  -webkit-background-size: contain;
  -moz-background-size: contain;
  -o-background-size: contain;
  background-size: contain;
  width: 100%;
  height: 512px;  
  color: white;
}

.footer {
  position: relative;
}

.social {
  position: absolute;
  bottom: 20px;
  left: 50%;
  width: 200px;
  margin-left: -100px;
  color: white;
  text-align: center;
  font-size: 18px;
  a {
    color: white;
  }
}

.scroll-up {
  opacity: 0;

  position: fixed;
  top: 20px;
  color: white;
  left: 50%;
  width: 200px;
  margin-left: -100px;
  text-align: center;

  @include transition(opacity 1s ease-in-out);
}

.scroll-up-show {
  opacity: 1;
}

.background-spacer {
  height: 2000px;
}

